# Noter

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile
backend/src/: database.rs  main.rs
backend/src/db/: document.rs  mod.rs
backend/src/errors/: response.rs
backend/src/models/: customer.rs  document.rs  mod.rs  user.rs
backend/src/routes/: customer.rs  document.rs  mod.rs
deploy/: docker-compose.yml
frontend_note/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend_note/src/: index.html  main.ts  proxy.conf.json  styles.scss
frontend_note/src/app/app/: app.routes.ts
frontend_note/src/app/editor/: editor.component.html  editor.component.spec.ts  editor.component.ts
frontend_note/src/app/list/: list.component.html  list.component.spec.ts  list.component.ts
frontend_note/src/app/models/: document.model.ts  style-command.model.ts
frontend_note/src/app/note-editor/: note-editor.component.html  note-editor.component.ts
frontend_note/src/app/note-list/: note-list.component.html  note-list.component.ts
frontend_note/src/app/services/: editor.service.spec.ts  editor.service.ts  list.service.spec.ts  list.service.ts  note-editor.service.spec.ts  note-editor.service.ts  note-list.service.ts  user.service.ts
frontend_note/src/app/template-old/: app.routes.ts
frontend_note/src/app/toolbar/: toolbar.component.html  toolbar.component.spec.ts  toolbar.component.ts
