[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
mongodb = "2.8.1"
serde = { version = "1.0.197", features = ["derive"] }
bson = "2.9.0"
dotenv = "0.15.0"
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
swagger-ui = "0.1.5"
futures = "0.3.30"
schemars = { version = "0.8.16", features = ["chrono"] }
chrono = { version = "0.4.34", features = ["serde"] }